// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component - TaskDetails renders correctly 1`] = `
<BackPageContainer
  backGroundShape={true}
  id="task-details-page"
  navItems={false}
>
  <TaskDetailsPlaceHolder />
  <a
    href="/buddy/tasks/undefined/edit-task"
    onClick={[Function]}
  >
    <EditButton
      aria-label="Edit task details"
      title="Update task details"
    />
  </a>
</BackPageContainer>
`;

exports[`Component - TaskDetails renders correctly 2`] = `
<BackPageContainer
  backGroundShape={true}
  id="task-details-page"
  navItems={false}
>
  <a
    href="/buddy/tasks/undefined/edit-task"
    onClick={[Function]}
  >
    <EditButton
      aria-label="Edit task details"
      title="Update task details"
    />
  </a>
</BackPageContainer>
`;
